--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "dependencies": {
     "adm-zip": "^0.4.14",
-    "ghostscript4js": "^3.2.1"
+    "ghostscript4js": "^3.2.1",
+    "sharp": "^0.25.2"
   },
   "devDependencies": {
     "electron": "^8.2.5"
