refactor directory structure and api-server

--- a/openapi/ebmgr.yaml
+++ b/openapi/ebmgr.yaml
@@ -59,7 +59,7 @@ components:
           type: string
           description: title of book
           example: some interesting title
-        path:
+        vpath:
           type: string
           description: virtualized path of book
           example: /foo/bar/baz
