--- a/openapi/ebmgr.yaml
+++ b/openapi/ebmgr.yaml
@@ -50,6 +50,40 @@ paths:
               schema:
                 type: string
                 format: binary
+  /books/{vpath}/star:
+    put:
+      x-swagger-router-controller: Default
+      description: add/remove star to the book
+      operationId: setStar
+      parameters:
+        - in: path
+          name: vpath
+          schema:
+            type: string
+          required: true
+          description: virtual path of the book
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                star:
+                  type: boolean
+                  description: true if the book has star
+                  example: true
+      responses:
+        "404":
+          description: A book with the given vpath was not found
+        "400":
+          description: invalid parameter
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        "200":
+          description: succeed
 components:
   schemas:
     Book:
