--- a/react-app/package.json
+++ b/react-app/package.json
@@ -10,7 +10,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "swagger-client": "^3.10.1"
+    "swagger-client": "^3.10.1",
+    "webpack-cli": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
