electron: add "development-rc" mode support

--- a/electron/Makefile
+++ b/electron/Makefile
@@ -1,5 +1,6 @@
-run:
+run-dev:
 	EBM_MODE=development ./node_modules/.bin/electron main.js
 
-
+run-rc:
+	EBM_MODE=development-rc ./node_modules/.bin/electron main.js
 
