--- a/react-app/package.json
+++ b/react-app/package.json
@@ -19,6 +19,12 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ]
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
