--- a/api-server/package.json
+++ b/api-server/package.json
@@ -13,8 +13,11 @@
   "private": true,
   "dependencies": {
     "connect": "^3.2.0",
+    "express-openapi": "^12.0.2",
+    "express-openapi-validator": "^4.13.8",
     "http-proxy-middleware": "^1.0.3",
     "js-yaml": "^3.3.0",
+    "morgan": "^1.10.0",
     "oas3-tools": "^2.0.2"
   }
 }
